--- a/fly.toml
+++ b/fly.toml
@@ -1,29 +1,23 @@
-# Fly.io App Configuration
-# https://fly.io/docs/reference/configuration/
+# fly.toml app configuration file generated for restless-hill-641 on 2026-02-10T15:33:19Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-app = "zmini"
-primary_region = "bom"
+app = 'restless-hill-641'
+primary_region = 'iad'
 
 [build]
-
-[env]
-  PORT = "8080"
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 1
-
-[[http_service.checks]]
-  interval = "15s"
-  timeout = "5s"
-  grace_period = "5s"
-  method = "GET"
-  path = "/api/health"
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-  cpu_kind = "shared"
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 512
+  memory_mb = 1024
