--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,6 @@
 # FastAPI and Server
-fastapi==0.109.1
-uvicorn[standard]==0.27.0
-python-multipart==0.0.6
-
-# Database
-asyncpg==0.29.0
-
-# AI/ML
-anthropic==0.18.1
-
-# Environment
-python-dotenv==1.0.0
-
-# Utilities
-pydantic==2.5.3
-pydantic-settings==2.1.0
+fastapi
+uvicorn[standard]
+asyncpg
+anthropic==0.39.0
+pydantic
